--- a/ansible/host_vars/buegelfalte.openrailwaymap.org.yml
+++ b/ansible/host_vars/buegelfalte.openrailwaymap.org.yml
@@ -1,5 +1,6 @@
 debian_version: buster
 pg_version: 11
+postgis_version: "2.5"
 timestamp_directory: /nvme/data
 osm_data_dir: /nvme/data/planet
 flatnodes_dir: /nvme/data/flatnodes
