Make fail2ban look for IP addresses getting many HTTP 429

--- a/ansible/openrailwaymap/fail2ban_custom.yml
+++ b/ansible/openrailwaymap/fail2ban_custom.yml
@@ -11,6 +11,18 @@
   notify:
     - reload fail2ban
 
+- name: Add filter for clients which get a lot of HTTP 429
+  copy:
+    dest: '/etc/fail2ban/filter.d/apache-429.local'
+    mode: 0644
+    owner: root
+    group: root
+    content: |
+      [Definition]
+      failregex = ^<HOST> .* 429 [0-9]+ ".+" ".+"$
+  notify:
+    - reload fail2ban
+
 - name: Customise fail2ban
   copy:
     dest: '/etc/fail2ban/jail.d/apache-abusive-monitoring.local'
@@ -26,6 +38,17 @@
       maxretry = 30
       bantime = 96h
       findtime = 1h
+      # Avoid accidential banning of Deutsche Bahn in order to keep email inbox small :-)
+      ignoreips = 81.200.197.0/24
+
+      [apache-429]
+      enabled = true
+      port = http,https
+      filter = apache-429
+      logpath  = %(apache_access_log)s
+      maxretry = 60000
+      bantime = 12h
+      findtime = 12h
       # Avoid accidential banning of Deutsche Bahn in order to keep email inbox small :-)
       ignoreips = 81.200.197.0/24
   notify:
