--- a/ansible/group_vars/tileservers.yml
+++ b/ansible/group_vars/tileservers.yml
@@ -169,8 +169,11 @@ apache:
 
         # User-agent of a browser and no referer
         RewriteCond "%{HTTP_USER_AGENT}" "Gecko/[0-9]+ Firefox/[0-9.]+$"
-        #RewriteCond "%{HTTP_USER_AGENT}" "(Gecko/[0-9]+ Firefox/[0-9.]+| Safari/[0-9]+.[0-9]+)$"
-        # Empty user agents
+        RewriteCond "%{HTTP_REFERER}" "^$"
+        RewriteRule "." "-" [F]
+
+        # User-agent of a desktop browser and no referer
+        RewriteCond "%{HTTP_USER_AGENT}" "^Mozilla/5.0 (Windows NT 10.0; Win64; x64) "
         RewriteCond "%{HTTP_REFERER}" "^$"
         RewriteRule "." "-" [F]
 
