--- a/ansible/group_vars/tileservers.yml
+++ b/ansible/group_vars/tileservers.yml
@@ -192,6 +192,8 @@ apache:
         RewriteCond "%{HTTP_USER_AGENT}" "^Wget/" [OR]
         # Go HTTP client
         RewriteCond "%{HTTP_USER_AGENT}" "^Go-http-client/" [OR]
+        # WindowsPowerShell (more than 40k requests/day from a single IP)
+        RewriteCond "%{HTTP_USER_AGENT}" "WindowsPowerShell/[0-9.]+" [OR]
         # Cloudflare, referrer (b|c).tiles.openrailwaymap.org
         RewriteCond "%{HTTP_USER_AGENT}" "^Cloudflare-Workers" [OR]
         # unset
