--- a/ansible/group_vars/tileservers.yml
+++ b/ansible/group_vars/tileservers.yml
@@ -139,7 +139,7 @@ apache:
         # More than 70k tile requets, commercial asset tracking
         RewriteCond "%{HTTP_REFERER}" "//glogist.ru/?" [OR]
         # Lacking attribution and more than 10k tile requests per day
-        RewriteCond "%{HTTP_REFERER}" "//fow\.vicc\.wang/?" [OR]
+        RewriteCond "%{HTTP_REFERER}" "//[a-z0-9]+\.vicc\.wang/?" [OR]
         # Non-public live tracking (Traccar instance), 30k requests/day. 395k requests/day after changing response to HTTP 429.
         RewriteCond "%{HTTP_REFERER}" "//(www\.)?golivetrack\.com/" [OR]
         # SEO website with ads and no meaningful content after a rough review (no HTTP 429 prior to black tile response)
