--- a/ansible/group_vars/tileservers.yml
+++ b/ansible/group_vars/tileservers.yml
@@ -142,6 +142,12 @@ apache:
         RewriteCond "%{HTTP_REFERER}" "//[a-z0-9]+\.vicc\.wang/?" [OR]
         # Non-public live tracking (Traccar instance), 30k requests/day. 395k requests/day after changing response to HTTP 429.
         RewriteCond "%{HTTP_REFERER}" "//(www\.)?golivetrack\.com/" [OR]
+        # > 200 k requests per day
+        RewriteCond "%{HTTP_REFERER}" "//railway.chienwen.net/" [OR]
+        # Non-public, 17k requests/day, HTTP 429 since 2024-10
+        RewriteCond "%{HTTP_REFERER}" "//greencargo\.outsystemsenterprise\.com/" [OR]
+        # Non-public live tracking, 24k requests/day, HTTP 429 without effect
+        RewriteCond "%{HTTP_REFERER}" "//track\.gpsdome\.net/" [OR]
         # SEO website with ads and no meaningful content after a rough review (no HTTP 429 prior to black tile response)
         RewriteCond "%{HTTP_REFERER}" "//zugradar.info/"
         RewriteRule "." "/tile-util/black.png" [PT]
@@ -177,6 +183,10 @@ apache:
         RewriteCond "%{HTTP_REFERER}" "^$"
         RewriteRule "." "-" [F]
 
+        # generic referer, likely not public accessible
+        RewriteCond "%{HTTP_REFERER}" "\[0-9]\.amazonaws\.com/"
+        RewriteRule "." "-" [F]
+
         # Generic user agents
         # Dalvik, an Android HTTP library
         RewriteCond "%{HTTP_USER_AGENT}" "^Dalvik/[0-9.]+ \(Linux; U; Android" [OR]
@@ -210,14 +220,23 @@ apache:
         # 131k requests/day, root website has no content
         RewriteCond "%{HTTP_REFERER}" "//railway\.chienwen\.net/" [OR]
         # Non-public live tracking, 26k requests/day
-        RewriteCond "%{HTTP_REFERER}" "pacificnational.comi\.au/" [OR]
+        RewriteCond "%{HTTP_REFERER}" "pacificnational.com\.au/" [OR]
         # Non-public live tracking, 24k requests/day
-        RewriteCond "%{HTTP_REFERER}" "//track\.gpsdome\.net/" [OR]
         RewriteCond "%{HTTP_REFERER}" "//heatmap\.zloco\.pl/" [OR]
+        # More than 20k requests/day, hostname cannot be resolved
+        RewriteCond "%{HTTP_REFERER}" "//vt\.kcvtp\.azds\.ns\.nl/" [OR]
+        # More than 20k requests/day, GitHub HTTP 404
+        RewriteCond "%{HTTP_REFERER}" "//taibeled\.github\.io/" [OR]
         # Non-public live tracking, 17k requests/day
         RewriteCond "%{HTTP_REFERER}" "//plataforma\.mundialgps\.com/" [OR]
-        # Non-public, 17k requests/day
-        RewriteCond "%{HTTP_REFERER}" "//greencargo\.outsystemsenterprise\.com/" [OR]
+        # 18k requests per 16 hours, non-public tracking
+        RewriteCond "%{HTTP_REFERER}" "trackerworldwide\.com/" [OR]
+        # 15k requests per 16 hours, non-public tracking
+        RewriteCond "%{HTTP_REFERER}" "//gps\.seccom\.ba/" [OR]
+        # 15k requests per 16 hours, non-public tracking
+        RewriteCond "%{HTTP_REFERER}" "//gps\.almaks\.rs/" [OR]
+        # 13k requests per 16 hours, non-public tracking
+        RewriteCond "%{HTTP_REFERER}" "tesaliagestion\.com/" [OR]
         # Stadler Rail, various referrers *.rds.stadlerrail.*, in total almost 200k requests/day, service not available to the public
         RewriteCond "%{HTTP_REFERER}" "//web\.rds\.stadlerrail\.ch/" [OR]
         # More than 10k tile requets per day but website is not public (looks like for-charge service)
